<resources>
    <string name="app_name">Covid-19 updates</string>
    <string name="about_developer">About Developers</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="developer_of_the_app">Developers of the App......</string>
    <string name="shivam_taneja"><![CDATA[> Shivam Taneja]]></string>
    <string name="graduated_from_uiet_pu_chandigarh_2019">Graduated from UIET(PU), Chandigarh(2019)</string>
    <string name="rishab_batra"><![CDATA[> Rishab Batra]]></string>
    <string name="graduated_from_jiit_noida_2018">Graduated from JIIT, Noida(2018)</string>
    <string name="contact_us">Contact us......</string>
    <string name="for_your_queries_complaints_mail_us_on">For your queries, complaints mail us on:-</string>
    <string name="e_mail_shivamtaneja1990_gmail_com"><![CDATA[> E mail - shivamtaneja1990@gmail.com]]></string>
    <string name="thank_you_for_downloading_the_app">Thank you for downloading the App......</string>
    <string name="keep_yourself_updated">Keep Yourself Updated :)</string>
    <string name="country">Country</string>
    <string name="confirmed_cases">Confirmed cases</string>
    <string name="deaths_cases">Death cases</string>
    <string name="recoverd_cases">Recoverd cases</string>
    <string name="total_cases">Total Cases:</string>
    <string name="total_deaths">Total Deaths:</string>
    <string name="total_recoveries">Total Recoveries:</string>
    <string name="about_covid">About Covid19</string>
    <string name="_0000"> </string>
    <string name="search_title">Search More Details</string>
    <string name="splash_screen_imaage">Splash screen imaage</string>
    <string name="overview">Overview</string>
    <string name="About_coronavirus1">- Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.\n\n - Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.\n\n - Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.\n\n- The best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes and how it spreads. Protect yourself and others from infection by washing your hands or using an alcohol based sanitizer rub frequently and not touching your face. \n\n- The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).</string>
    <string name="prevention">Prevention</string>
    <string name="About_prevention">- Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub. \n\n- Maintain at least 1 metre distance between you and people coughing or sneezing.\n\n- Avoid touching your face.\n\n- Cover your mouth and nose when coughing or sneezing.\n\n- Stay home if you feel unwell.\n\n- Refrain from smoking and other activities that weaken the lungs.\n\n- Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people</string>
    <string name="symptoms">Symptoms</string>
    <string name="about_symptoms">Common symptoms include:\n- fever\n- tiredness\n- dry cough.\n\nOther symptoms include:\n- shortness of breath- aches and pains\n- sore throat\n- And very few people will report diarrhoea, nausea or a runny nose.\n- People with mild symptoms who are otherwise healthy should self-isolate and contact their medical provider or a COVID-19 information line for advice on testing and referral.</string>
    <string name="graph_analysis"><u>Click to see Graph</u></string>
    <string name="global_figures">Global Figures</string>
    <string name="About_developers">About Developers</string>
    <string name="about_covid_19">About Covid-19</string>
    <string name="figures">Figures</string>
    <string name="key">key</string>
    <string name="graphical_analysis">Graphical Analysis</string>
    <string name="search_your_country">Search Your Country</string>
    <string name="north_korea">Northkorea</string>
    <string name="sorry_msg">Sorry, we don\'t have confirm data for this country</string>
    <string name="Data_downloading">Data is downloading</string>
    <string name="sorry_msg2">Sorry for the error, soon we will fix it. Thanks for your patience</string>
    <string name="sorry_mfg3">Couldn\'t get Data from server. Soon we will fix it. Thanks for your patience</string>
</resources>
