<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarSize="3dp"
    android:background="@color/grey_searchbar"
    tools:context=".AboutCovid">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textColor="@color/blue_used"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="24sp"
            android:layout_marginRight="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/About_coronavirus1"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prevention"
            android:textColor="@color/blue_used"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="24sp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/About_prevention"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symptoms"
            android:textColor="@color/blue_used"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="24sp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_symptoms"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>

