<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Piechart">

    <lecho.lib.hellocharts.view.PieChartView
        android:id="@+id/chart"
        android:layout_width="308dp"
        android:layout_height="292dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="173dp"
        android:layout_height="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/recoverd_cases"
        android:textColor="@color/green_recv"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/chart"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="148dp"
        android:layout_height="34dp"
        android:text="@string/deaths_cases"
        android:textColor="@color/colorRed_900"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="187dp"
        android:layout_height="32dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="56dp"
        android:text="@string/confirmed_cases"
        android:textColor="@color/yellow_conf"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="209dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:text="@string/global_figures"
        android:textColor="@color/blue_used"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

</androidx.constraintlayout.widget.ConstraintLayout>